fixed scrollbarissue for prior firefox versions

--- a/src/app/monitoring/components/panel/element-wrapper/element-wrapper.component.scss
+++ b/src/app/monitoring/components/panel/element-wrapper/element-wrapper.component.scss
@@ -3,8 +3,6 @@
 
 #element{
     max-width: 100%;
-    overflow: scroll;
-    //display: felx;
     flex-direction: column;
     border: solid #e1e1e1;
     border-width: 3px;
