--- a/src/app/monitoring/shared/components/table/table.component.scss
+++ b/src/app/monitoring/shared/components/table/table.component.scss
@@ -4,18 +4,24 @@
 #table{
 
     overflow: scroll;
+    //overflow: -moz-scrollbars-none;
     width: max-content;
     margin: 0.2em;
+    
 
 }
 #table::-webkit-scrollbar{
     display:none;
 }
 
+table *{
+    scrollbar-width: none;
+}
 
 #table * ::-webkit-scrollbar{
     display:none;
 }
+
 
 .table-header::-webkit-scrollbar {
     display:none;
@@ -23,7 +29,7 @@
 
 .table-header{
 
-    overflow: scroll;
+    
     text-align: center;
     margin-bottom: 0.4em;
     color: #444;
